<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContestApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="obd_select">Select Your OBD</string>
    <string name="action_settings">Settings</string>
    <string name="drive_current_points">Current Points</string>
    <string name="drive_points_placeholder">40 / 100</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="trip_pts_earned">You earned</string>
    <string name="trip_pts_placeholder">20</string>
    <string name="trip_pts">points</string>
    <string name="trip_from_placeholder">Stillwater, OK</string>
    <string name="trip_to_placeholder">Oklahoma City, OK</string>
    <string name="emergency_call">Make Emergency Call</string>
    <string name="accident_info_button">Report An Accident</string>
    <string name="settings_menu">Settings</string>
    <string name="sign_out_button">Sign out</string>
    <string name="bluetooth_connect_title">Bluetooth Connection</string>

    <string-array name="nav_drawer_titles">
        <item name="userName"> Header PlaceHolder</item>
        <item>Home</item>
        <item>DRIVE TO WIN</item>
        <item>Stats</item>
        <item>Achievements</item>
        <item>MY TRIPS</item>
        <item>Trips</item>
        <item>MY VEHICLE</item>
        <item>Profile</item>
        <item>Insurance Info</item>
        <item>Emergency</item>
        <item>Settings</item>
    </string-array>

    <string-array name="nav_drawer_types">
        <item>HeaderView</item>
        <item>Activity</item>
        <item>Header</item>
        <item>Activity</item>
        <item>Activity</item>
        <item>Header</item>
        <item>Activity</item>
        <item>Header</item>
        <item>Activity</item>
        <item>Activity</item>
        <item>Activity</item>
        <item>Activity</item>
    </string-array>

    <string-array name="achievement_description">
        <item name="firstDrive">You Went on Your First Drive</item>
        <item name="fiveDrives">You Drove Five Times!</item>
        <item name="firstSafeDrive">Drove Safely for the First Time!</item>
        <item name="fiveSafeDrive">Drove Safely 5 Times!</item>
        <item name="tenSafeDrive">Drove Safely 10 Times!</item>
        <item name="twentyFiveSafeDrive">Drove Safely 25 Times!</item>
        <item name="fiftySafeDrive">Drove Safely 50 Times!</item>
        <item name="google+">You Logged In With Google+</item>
        <item name="obdConnect">You Connected to Your On Board Device!</item>
    </string-array>

    <string-array name="achievement_title">
        <item name="firstDriveTitle">First Drive</item>
        <item name="fiveDrivesTitle">Five Drives</item>
        <item name="firstSafeDriveTitle">First Safe Drive</item>
        <item name="fiveSafeDriveTitle">Five Safe Drives</item>
        <item name="tenSafeDriveTitle">Ten Safe Drives</item>
        <item name="twentySafeDriveTitle">Twenty Safe Drives</item>
        <item name="fiftySafeDriveTitle">Fifty Safe Drives</item>
        <item name="loggedInWithGoogle+">Google+</item>
        <item name="connectedToOBD">Connected to OBD</item>
    </string-array>

    <string-array name="achievement_have_earned">
        <item name="hasFirstDriveTitle">true</item>
        <item name="hasFiveDrives">true</item>
        <item name="hasFirstSafeDrive">true</item>
        <item name="hasFiveSafeDrive">false</item>
        <item name="hasTenSafeDrive">true</item>
        <item name="hasTwentySafeDrive">false</item>
        <item name="hasFiftySafeDrive">false</item>
        <item name="hasGoogle+">true</item>
        <item name="connectedToOBD">true</item>
    </string-array>
    
    <string-array name="settings_menu_rows">
        <item>Bluetooth Status</item>
    </string-array>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>

    <string name="title_activity_nav_drawer">NavDrawerActivity1</string>
    <string name="loading">Loading...</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="drive_mode_on">Drive Mode On</string>

</resources>
