<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="110dip">

    <ImageView
        android:layout_width="0dip"
        android:layout_height="100dip"
        android:layout_weight="0.3"
        android:id="@+id/trip_map_view"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="110dip"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:textSize="16sp"
            android:text="@string/from"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:id="@+id/trip_from_text"
            android:text="@string/trip_from_placeholder"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:textSize="16sp"
            android:text="@string/to"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:id="@+id/trip_to_text"
            android:text="@string/trip_to_placeholder"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="100dip"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_pts_earned"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="5dip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/trip_points_earned"
            android:textSize="28sp"
            android:layout_marginTop="5dip"
            android:text="@string/trip_pts_placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/trip_pts"/>

    </LinearLayout>

</LinearLayout>